# autonomous_patrolling

./: .gitignore  README.md
ap_msgs/: CMakeLists.txt  package.xml
ap_msgs/msg/: NavStatus.msg
ap_msgs/srv/: GetEpisodeComplete.srv  GetEpisodeNames.srv  GetEpisodeSummary.srv  GetLatestEpisodeName.srv  PauseResumePatroller.srv
autonomous_patrolling/: CMakeLists.txt  package.xml
doc/: joypad-cheat-sheet.odg
map_saver/: CMakeLists.txt  package.xml
map_saver/launch/: ap_map_saver.launch  joy_map_saver.launch
map_saver/src/: ap_map_saver.cpp
nav_monitor/: CMakeLists.txt  package.xml
nav_monitor/scripts/: nav_monitor.py
patrol_snapshot/: CMakeLists.txt  package.xml
patrol_snapshot/action/: PatrolSnapshot.action
patrol_snapshot/scripts/: snapshot.py  snaptest.py
rosbuild_ws/: .rosinstall  .rosinstall.bak  setup.bash  setup.sh  setup.zsh
rosbuild_ws/patroller/: mainpage.dox  manifest.xml
rumblepad_control/launch/: rumblepad_control.launch
src/map_saver/: CMakeLists.txt  package.xml
src/map_saver/maps/: map.yaml
src/rumblepad_control/: CMakeLists.txt  package.xml
src/waypoint_patroller/: package.xml
src/waypoint_recorder/: CMakeLists.txt
topological_patroller/: CMakeLists.txt  README.md  package.xml  setup.py
topological_patroller/action/: DoPatrol.action
topological_patroller/launch/: patrol.launch  patrol_server.launch
waypoint_patroller/: CMakeLists.txt  package.xml  setup.py
waypoint_recorder/: CMakeLists.txt  package.xml
waypoint_visualiser/: CMakeLists.txt  package.xml  setup.py
waypoint_visualiser/scripts/: visualise.py
(+83 files in other folders)
