<?xml version="1.0"?>
<package>
  <name>waypoint_visualiser</name>
  <version>0.0.1</version>
  <description>This package publishes interactive visualisation markers for the autonomous_patroller waypoints.</description>

  <maintainer email="cburbridge@gmail.com">Chris Burbridge</maintainer>

  <license>BSD</license>

  <url type="website">http://www.github.com/strands-project/autonomous_patrolling/waypoint_visualiser</url>

  <author email="cburbridge@gmail.com">Chris Burbridge</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>strands_datacentre</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>strands_datacentre</run_depend>
  <run_depend>visualization_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>